--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ fonttools==4.51.0
 fsspec==2024.3.1
 h5py==3.12.1
 idna==3.7
-Jinja2==3.1.3
+Jinja2>=3.1.4
 joblib==1.4.0
 kiwisolver==1.4.5
 lazy_loader==0.4
@@ -34,7 +34,7 @@ pycparser==2.22
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
 pytz==2024.1
-requests==2.31.0
+requests>=2.32.0
 resampy==0.4.3
 scikit-learn>=1.5.0
 scipy==1.13.0
